--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "简易静态服务器",
   "main": "nodejs.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node staticServer.js"
   },
   "repository": {
@@ -23,7 +22,7 @@
   "devDependencies": {
     "@types/mime": "^2.0.1",
     "@types/node": "^12.0.2",
-    "mime": "^2.cnpm i4.3",
+    "mimie": "^1.0.0",
     "zlib": "^1.0.5"
   }
 }
