--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/mime": "^2.0.1",
     "@types/node": "^12.0.2",
-    "mimie": "^1.0.0",
+    "mime": "^2.4.4",
     "zlib": "^1.0.5"
   }
 }
